# Capstone-Project---World-simulation

./: README.md  pyproject.toml  requirements.txt  run.py
example_scenario_5000BC/: agreements_tick_1.json  agreements_tick_2.json  agreements_tick_3.json  agreements_tick_4.json  agreements_tick_5.json  analysis.json  history.jsonl  messages_tick_1.json  messages_tick_2.json  messages_tick_3.json  messages_tick_4.json  messages_tick_5.json  role_specs.json  world_final.json  world_initial.json  world_tick_1.json  world_tick_2.json  world_tick_3.json  world_tick_4.json
runs/2025-11-19_14-29-28/: history.jsonl
runs/2025-11-19_14-32-23/: history.jsonl
runs/2025-11-19_14-36-17/: history.jsonl
runs/2025-11-19_14-39-18/: history.jsonl
runs/2025-11-19_14-50-12/: history.jsonl
runs/2025-11-19_15-05-46/: history.jsonl  world_initial.json  world_tick_1.json  world_tick_2.json  world_tick_3.json  world_tick_4.json  world_tick_5.json  world_tick_6.json
runs/2025-11-19_15-13-30/: history.jsonl  world_final.json  world_initial.json  world_tick_1.json  world_tick_2.json  world_tick_3.json  world_tick_4.json  world_tick_5.json
runs/2025-11-19_15-22-49/: history.jsonl  world_initial.json  world_tick_1.json  world_tick_2.json
society_sim/: .env  .gitignore  README.md
society_sim/contracts/: analysis.schema.json  bootstrap.schema.json  coordination.schema.json  events.schema.json  message.schema.json  messaging_round.schema.json  (+1 more)
tests/: test_agent_actions.py  test_class_entity.py  test_conflict.py  test_diplomacy.py  test_state_logic.py
worldbuilder/: run.py
(+43 files in other folders)
