# pyproject.toml
[tool.poetry]
name = "world-simulation"
version = "0.1.0"
description = "World simulation project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
google-adk = "*"
matplotlib = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
